feat(gallery): 添加相册图片缩略图功能
- 移除平台相关的BASE_URL配置，统一使用固定URL
- 新增gallery_cache目录用于存储图片缩略图- 扩展图片外链URL生成逻辑，支持gallery_cache类型
- 在上传到相册时自动生成并保存缩略图- 更新数据库记录结构，添加thumb字段存储缩略图URL
- 修改前端展示逻辑，使用缩略图URL替代OSS图片处理参数
- 移除未使用的etag表单字段和upload_policy路由- 重命名Flask应用实例变量名以避免命名冲突

--- a/static/index.html
+++ b/static/index.html
@@ -120,7 +120,7 @@
                 <button class="favorite-btn" :class="{favorited: item.favorite}" @click.stop="toggleFavorite(item)">
                     {{ item.favorite ? '❤️' : '🖤' }}
                 </button>
-                <img :src="`${item.oss_url}?x-oss-process=image/resize,p_30`" @click="openViewer(index)" @load="onImageLoad(index, $event)">
+                <img :src="`${item.thumb}`" @click="openViewer(index)" @load="onImageLoad(index, $event)">
             </div>
             <div class="image-info">
                 <div class="filename">{{ item.filename }}</div>
