feat(gallery): 添加API基础URL配置支持- 在data中新增apiBaseUrl属性，默认值为'https://api.zytsy.icu'- 修改axios GET请求，使用apiBaseUrl拼接完整URL- 修改axios POST请求，使用apiBaseUrl拼接完整URL - 统一API请求地址管理，便于后续部署和调试

--- a/static/index.html
+++ b/static/index.html
@@ -163,6 +163,7 @@ new Vue({
         jumpPage: '',
         loading: false,
         loadingText: '加载中...',
+        apiBaseUrl: 'https://api.zytsy.icu',
         apiUrl: '/api/gallery',
         columnCount: 2,
         columnWidth: 0,
@@ -194,7 +195,7 @@ new Vue({
             if (this.currentView === 'gallery' && this.selectedDevice) params.device = this.selectedDevice;
 
             try {
-                const res = await axios.get(url, { params });
+                const res = await axios.get(this.apiBaseUrl + url, { params });
                 if (res.data.success) {
                     const data = res.data.data;
                     this.records = data.records.map(r => ({ ...r, loaded: false, style: {} }));
@@ -264,7 +265,7 @@ new Vue({
         },
         async toggleFavorite(item) {
             try {
-                const res = await axios.post(`/api/favorite/${item.id}`);
+                const res = await axios.post(this.apiBaseUrl + `/api/favorite/${item.id}`);
                 if (res.data.success) {
                     item.favorite = res.data.favorite;
                     if (this.currentView === 'favorites' && !item.favorite) this.reloadData();
